--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ z-index:9999
     
 
     <div class="header header-fixed header-logo-center">
-        <a href="index.html" class="header-title"></a>
+        <a href="static/index.html" class="header-title">static</a>
         <a href="#" data-back-button class="header-icon header-icon-1"><i class="fas fa-chevron-left"></i></a>
         <!-- <a href="#" data-toggle-theme class="header-icon header-icon-4"><i class="fas fa-lightbulb"></i></a> -->
     </div>
